@startuml
'https://plantuml.com/class-diagram

title 道具工厂模式

abstract class EnemyAircraft {
    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {abstract} getScore():int
    + {abstract} getProps():List<AbstractProp>
    + setHp(int hp):void
    + setMaxHp(int maxHp):void
}

class EliteEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + getProps():List<AbstractProp>
}

class ElitePlusEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class BossEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} activate(HeroAircraft hero)
}

class HpSupply {
    - hpIncrease:int
    + HpSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class BombSupply {
    + {static} observers:List<BombObserver>
    + {static} registerObserver(BombObserver s):void
    + {static} removeObserve(BombObserver s):void
    - notifyObservers():void
    + BombSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class FireSupply {
    - {static} DURATION:long
    + FireSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class FirePlusSupply {
    - {static} DURATION:long
    + FirePlusSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

interface PropFactory {
    + {abstract} createProp(int locationX, int locationY): AbstractProp
}

class HpSupplyFactory {
    + speedY:int
    + createProp(int locationX, int locationY): AbstractProp
}
class BombSupplyFactory {
    + speedY:int
    + createProp(int locationX, int locationY): AbstractProp
}
class FireSupplyFactory {
    + speedY:int
    + createProp(int locationX, int locationY): AbstractProp
}
class FirePlusSupplyFactory {
    + speedY:int
    + createProp(int locationX, int locationY): AbstractProp
}

AbstractProp <|-- HpSupply
AbstractProp <|-- BombSupply
AbstractProp <|-- FireSupply
AbstractProp <|-- FirePlusSupply

PropFactory <|.. HpSupplyFactory
PropFactory <|.. BombSupplyFactory
PropFactory <|.. FireSupplyFactory
PropFactory <|.. FirePlusSupplyFactory

PropFactory ..> AbstractProp

HpSupplyFactory ..> HpSupply
BombSupplyFactory ..> BombSupply
FireSupplyFactory ..> FireSupply
FirePlusSupplyFactory ..> FirePlusSupply

EnemyAircraft ..> AbstractProp
ElitePlusEnemy ..> PropFactory
BossEnemy ..> PropFactory
EliteEnemy ..> PropFactory

@enduml